--- a/index.html
+++ b/index.html
@@ -1,29 +1,57 @@
-import React from "react";
-import { useNavigate } from "react-router-dom";
-import "tailwindcss/tailwind.css";
-
-const Home = () => {
-  const navigate = useNavigate();
-
-  return (
-    <div className="bg-black min-h-screen flex flex-col items-center justify-center text-white p-5">
-      <h1 className="text-4xl font-bold text-orange-500 mb-6">CS2 Mini-Game Hub</h1>
-      <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
-        <button
-          className="bg-orange-500 hover:bg-orange-600 text-black font-bold py-4 px-6 rounded-2xl shadow-lg transition duration-300"
-          onClick={() => navigate("/quiz")}
-        >
-          🎯 CS2 Quiz
-        </button>
-        <button
-          className="bg-orange-500 hover:bg-orange-600 text-black font-bold py-4 px-6 rounded-2xl shadow-lg transition duration-300"
-          onClick={() => navigate("/snake")}
-        >
-          🐍 Змейка
-        </button>
-      </div>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CS2 Mini-App</title>
+    <style>
+        body {
+            background-color: #1b1b1b;
+            color: #fff;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        .container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
+        h1 {
+            color: #ff9800;
+        }
+        .button {
+            background-color: #ff9800;
+            color: #1b1b1b;
+            border: none;
+            padding: 15px 30px;
+            margin: 10px;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: 0.3s;
+        }
+        .button:hover {
+            background-color: #e68900;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>CS2 Mini-App</h1>
+        <button class="button" onclick="startQuiz()">CS2 Quiz</button>
+        <button class="button" onclick="startSnake()">Змейка</button>
     </div>
-  );
-};
-
-export default Home;
+    <script>
+        function startQuiz() {
+            alert("Запуск CS2 Quiz...");
+        }
+        function startSnake() {
+            alert("Запуск Змейки...");
+        }
+    </script>
+</body>
+</html>
