--- a/index.html
+++ b/index.html
@@ -1,57 +1,22 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS2 Mini-App</title>
-    <style>
-        body {
-            background-color: #1b1b1b;
-            color: #fff;
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-        h1 {
-            color: #ff9800;
-        }
-        .button {
-            background-color: #ff9800;
-            color: #1b1b1b;
-            border: none;
-            padding: 15px 30px;
-            margin: 10px;
-            font-size: 18px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: 0.3s;
-        }
-        .button:hover {
-            background-color: #e68900;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>CS2 Mini-App</h1>
-        <button class="button" onclick="startQuiz()">CS2 Quiz</button>
-        <button class="button" onclick="startSnake()">Змейка</button>
+import React from "react";
+import "./styles.css";
+
+const App = () => {
+  return (
+    <div className="container">
+      <h1>CS2 Mini-App</h1>
+      <div className="menu">
+        <button className="btn">📌 Записаться на турнир</button>
+        <button className="btn">📜 Список участников</button>
+        <button className="btn">🚪 Выйти из списка</button>
+      </div>
+      <h2>Выберите мини-игру:</h2>
+      <div className="game-menu">
+        <button className="btn">🎮 CS2 Quiz</button>
+        <button className="btn">🐍 Змейка</button>
+      </div>
     </div>
-    <script>
-        function startQuiz() {
-            alert("Запуск CS2 Quiz...");
-        }
-        function startSnake() {
-            alert("Запуск Змейки...");
-        }
-    </script>
-</body>
-</html>
+  );
+};
+
+export default App;
