--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 <body>
     <div class="container">
         <h1>Добро пожаловать в CS2 Mini-App</h1>
+
+        <!-- Кнопки записи на турнир -->
+        <div class="tournament-buttons">
+            <button onclick="joinTournament()">🎮 Записаться на игру</button>
+            <button onclick="leaveTournament()">🚪 Выйти из списка</button>
+            <button onclick="showPlayers()">📋 Список участников</button>
+        </div>
+
+        <!-- Кнопки выбора мини-игры -->
         <div class="menu">
             <button onclick="window.location.href='quiz.html'">🔥 CS2 Quiz</button>
             <button onclick="window.location.href='snake.html'">🐍 Змейка</button>
@@ -17,5 +26,18 @@
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        function joinTournament() {
+            window.Telegram.WebApp.sendData("join");
+        }
+
+        function leaveTournament() {
+            window.Telegram.WebApp.sendData("leave");
+        }
+
+        function showPlayers() {
+            window.Telegram.WebApp.sendData("list");
+        }
+    </script>
 </body>
 </html>
