--- a/quiz.html
+++ b/quiz.html
@@ -11,8 +11,9 @@
         <h1>CS2 Quiz</h1>
         <div id="quiz-container">
             <p id="question"></p>
+            <img id="question-image" src="" alt="Изображение вопроса" style="display: none; width: 300px;">
             <div id="answers"></div>
-            <button id="next" class="game-button" onclick="nextQuestion()">Далее</button>
+            <button id="next" class="game-button" style="display: none;">Далее</button>
         </div>
     </div>
     <script src="quiz.js"></script>
